; ModuleID = '/home/carl/AnghaBench/linux/drivers/net/ethernet/ibm/emac/extr_core.c_emac_mdio_setup_aneg.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/net/ethernet/ibm/emac/extr_core.c_emac_mdio_setup_aneg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mii_phy = type { i32, i32, %struct.net_device* }
%struct.net_device = type { i32 }
%struct.emac_instance = type { i32 }

@AUTONEG_ENABLE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.mii_phy*, i32)* @emac_mdio_setup_aneg to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emac_mdio_setup_aneg(%struct.mii_phy* %0, i32 %1) #0 {
  %3 = alloca %struct.mii_phy*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.net_device*, align 8
  %6 = alloca %struct.emac_instance*, align 8
  store %struct.mii_phy* %0, %struct.mii_phy** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %8 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %7, i32 0, i32 2
  %9 = load %struct.net_device*, %struct.net_device** %8, align 8
  store %struct.net_device* %9, %struct.net_device** %5, align 8
  %10 = load %struct.net_device*, %struct.net_device** %5, align 8
  %11 = call %struct.emac_instance* @netdev_priv(%struct.net_device* %10)
  store %struct.emac_instance* %11, %struct.emac_instance** %6, align 8
  %12 = load i32, i32* @AUTONEG_ENABLE, align 4
  %13 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %14 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %13, i32 0, i32 1
  store i32 %12, i32* %14, align 4
  %15 = load i32, i32* %4, align 4
  %16 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %17 = getelementptr inbounds %struct.mii_phy, %struct.mii_phy* %16, i32 0, i32 0
  store i32 %15, i32* %17, align 8
  %18 = load %struct.mii_phy*, %struct.mii_phy** %3, align 8
  %19 = load %struct.emac_instance*, %struct.emac_instance** %6, align 8
  %20 = getelementptr inbounds %struct.emac_instance, %struct.emac_instance* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i32 @emac_mdio_phy_start_aneg(%struct.mii_phy* %18, i32 %21)
  ret i32 %22
}

declare dso_local %struct.emac_instance* @netdev_priv(%struct.net_device*) #1

declare dso_local i32 @emac_mdio_phy_start_aneg(%struct.mii_phy*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
